roles based code in place and functional through swagger api-docs
